--- a/ManageCash/templates/include/topbar.html
+++ b/ManageCash/templates/include/topbar.html
@@ -12,10 +12,10 @@
       </button>
       <ul class="dropdown-menu">
         <li>
-          <a class="dropdown-item" href="#">View Profile</a>
+          <a class="dropdown-item" href="{% url 'profile' %}">View Profile</a>
         </li>
         <li>
-          <a class="dropdown-item" href="#">Logout</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
         </li>
       </ul>
     </div>
