--- a/ManageCash/templates/pages/dashboard.html
+++ b/ManageCash/templates/pages/dashboard.html
@@ -3,9 +3,10 @@
 {% block content %}
   <div class="overview-card">
     <div class="container-fluid">
+      {% include 'include/alert.html' %}
       <div class="row">
         <div class="col-md-4">
-          <div class="card bg-gradient bg-primary px-2 py-3">
+          <div class="card bg-gradient bg-primary px-2 py-3 rounded-4">
             <div class="card-body d-flex justify-content-between align-items-center text-white">
               <div class="card-left">
                 <span class="display-4">📥</span>
@@ -18,7 +19,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card bg-gradient bg-info px-2 py-3">
+          <div class="card bg-gradient bg-black px-2 py-3 rounded-4">
             <div class="card-body d-flex justify-content-between align-items-center text-white">
               <div class="card-left">
                 <span class="display-4">💸</span>
@@ -31,13 +32,13 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="card bg-gradient bg-info px-2 py-3">
+          <div class="card bg-gradient bg-danger px-2 py-3 rounded-4">
             <div class="card-body d-flex justify-content-between align-items-center text-white">
               <div class="card-left">
-                <span class="display-4">⚖️</span>
+                <span class="display-4">🏛️</span>
               </div>
               <div class="card-right text-end">
-                <h4 class="m-0">Total Expense <small>(BDT)</small></h4>
+                <h4 class="m-0">Balance <small>(BDT)</small></h4>
                 <h2 class="m-0">1000.00</h2>
               </div>
             </div>
