--- a/ManageCash/templates/pages/dashboard.html
+++ b/ManageCash/templates/pages/dashboard.html
@@ -15,7 +15,7 @@
             </div>
             <div class="text-end">
               <h6 class="m-0 text-uppercase small opacity-75">Total Cash In</h6>
-              <h4 class="m-0 fw-bold">1000.00 <small class="opacity-75">BDT</small></h4>
+              <h4 class="m-0 fw-bold">{{ cash_in }} <small class="opacity-75">BDT</small></h4>
             </div>
           </div>
         </div>
