Udpate expense list

--- a/ManageCash/templates/pages/dashboard.html
+++ b/ManageCash/templates/pages/dashboard.html
@@ -30,7 +30,7 @@
             </div>
             <div class="text-end">
               <h6 class="m-0 text-uppercase small opacity-75">Total Expense</h6>
-              <h4 class="m-0 fw-bold">1000.00 <small class="opacity-75">BDT</small></h4>
+              <h4 class="m-0 fw-bold">{{ exp_data }} <small class="opacity-75">BDT</small></h4>
             </div>
           </div>
         </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="text-end">
               <h6 class="m-0 text-uppercase small opacity-75">Balance</h6>
-              <h4 class="m-0 fw-bold">1000.00 <small class="opacity-75">BDT</small></h4>
+              <h4 class="m-0 fw-bold">{{ balance }} <small class="opacity-75">BDT</small></h4>
             </div>
           </div>
         </div>
