--- a/ManageCash/templates/pages/cash-list.html
+++ b/ManageCash/templates/pages/cash-list.html
@@ -52,7 +52,7 @@
                             <span class="d-inline-block">
                               <form class="form btn-outline-danger" action="{% url 'cash_delete' cash.id %}" method="POST">
                                 {% csrf_token %}
-                                <button onclick="return confirm('Are you sure you want to delete this cash record?');" class="bth btn-danger text-danger btn-link border-1" type="submit"><i class="fa-solid fa-trash-can"></i></button>
+                                <button onclick="return confirm('Are you sure you want to delete this cash record?');" class="bth btn-danger text-danger btn-link border-1 bg-transparent del_button_custom" type="submit"><i class="fa-solid fa-trash-can"></i></button>
                               </form>
                             </span>
                           </div>
@@ -97,7 +97,7 @@
                 <i class="fa-regular fa-folder-open fa-3x text-muted mb-3"></i>
                 <h5 class="text-muted">No cash records found</h5>
                 <p class="text-muted small mb-3">Start by adding your first cash entry to track your income.</p>
-                <a href="{% url 'add_cash' %}" class="btn btn-success"><i class="fa-solid fa-circle-plus me-1"></i> Add Cash</a>
+                <a href="{% url 'add_cash' %}" class="btn btn-primary"><i class="fa-solid fa-circle-plus me-1"></i> Add Cash</a>
               </div>
             {% endif %}
           </div>
