--- a/ManageCash/templates/base.html
+++ b/ManageCash/templates/base.html
@@ -14,6 +14,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'sidebar.css' %}">
     <link rel="stylesheet" href="{% static 'main.css' %}">
+    <!-- Chart.js (UMD) for rendering charts in dashboards -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
   </head>
   <body>
     {% include 'include/sidebar.html' %}
@@ -25,5 +27,6 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
     <script src="{% static 'main.js' %}"></script>
+    <script src="{% static 'js/dashboard.js' %}"></script>
   </body>
 </html>
